# GestureRecognition-ESP32S3

./: CMakeLists.txt  Makefile  README.md  onnx_pred_s.py  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  station_upload.c
